<resources>
    <string name="app_name">note</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="web">Web</string>
    <string name="notes">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="my_notes">My Notes</string>
    <string name="online_comments">Online Comments</string>
</resources>
